# ImessageExtractor

./: .gitignore  Package.resolved  Package.swift  README.md  SECURITY.md  project.yml
.github/workflows/: macos.yml
Config/: Debug.xcconfig  Release.xcconfig
MessageExporterApp.xcodeproj/: project.pbxproj
MessageExporterApp.xcodeproj/xcshareddata/xcschemes/: MessageExporterApp.xcscheme
Resources/: synthetic-chat.db
Sources/App/: AppState.swift
Sources/Data/: MessagesDataStore.swift  Models.swift  SQLiteReadOnly.swift  SchemaProbe.swift
Sources/Export/: EncryptedPackage.swift  Exporter.swift
Sources/UI/: DiagnosticsView.swift  ExportView.swift  MainShellView.swift  PermissionSettingsView.swift  RootView.swift  SetupWizardView.swift
Sources/Utilities/: AppLogger.swift  AppleDateConverter.swift  ContactResolver.swift  DiagnosticsStore.swift  MessageTextDecoder.swift  SystemSettingsLink.swift
Tests/MessageExporterTests/: DateConverterTests.swift  EncryptionTests.swift  ExportTests.swift  SchemaProbeTests.swift
backend/: requirements.txt
backend/app/: __init__.py  auth.py  crypto.py  errors.py  exporter.py  main.py  messages_db.py  models.py
backend/tests/: test_api.py  test_crypto.py
macos-app/: Package.swift  README.md
macos-app/.github/workflows/: macos.yml
scripts/: build-dmg.sh  collect-diagnostics.sh  create-app-bundle.sh  generate-synthetic-db.sh  run-app.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  api.ts
(+19 files in other folders)
