[package]
name = "imessage_exporter"
version = "0.1.0"
description = "Secure iMessage export desktop application"
authors = ["iMessage Exporter Team"]
license = "MIT"
repository = "https://example.invalid/imessage-exporter"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.2.5", features = [] }
